# fall2020-ML

./: .gitignore  README.md
proj1/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Classifications.cpp  Classifications.h  Classifier.cpp  Classifier.h  DataClass.cpp  DataClass.h  DataLine.cpp  DataLine.h  Evaluate.cpp  Evaluate.h  ML.cpp  ML.h  README.md  Reader.cpp  Reader.h  main  main.cpp
proj1/data/: soybean-small.data
proj1/paper/: proj1.aux  proj1.blg  proj1.fdb_latexmk  proj1.fls  proj1.tex
proj1/paper/figures/: plot1.py
proj1/processors/: voteprocessor.h
proj1/readers/: cancerreader.h  glassreader.h  irisreader.h  main_reader.h  soyreader.h  votereader.h
proj2/: Algorithm.py  DataClass.py  ML.py  data_line.py  evaluator.py  knn.py  main.py  reader.py
proj2-tex/: proj2.tex
proj2/data/: .gitattributes  abalone_distance_matrix.data  forestfires_distance_matrix.data  glass_distance_matrix.data  house-votes-84_distance_matrix.data  machine_distance_matrix.data  segmentation.data  segmentation_distance_matrix.data
proj3/: Algorithm.py  DataClass.py  ML.py  MLP.py  evaluator.py  layer.py  main.py  node.py  reader.py
proj3/proj3-tex/: proj3.aux  proj3.fdb_latexmk  proj3.fls  proj3.tex
proj4/: ML.py  MLP.py  data_line.py  de.py  evaluator.py  ga.py  layer.py  main.py  node.py  pso.py
proj4/proj4-tex/: proj4.tex
